@@ -6,7 +6,6 @@ BEGIN {
 	use_ok( 'Dist::Zilla::Plugin::JSAN' );
 	use_ok( 'Dist::Zilla::Plugin::JSAN::Bundle' );
 	use_ok( 'Dist::Zilla::Plugin::JSAN::Minter' );
-	use_ok( 'Dist::Zilla::Plugin::JSAN::Prereq' );
 	use_ok( 'Dist::Zilla::Plugin::JSAN::ReadmeFromMD' );
 }
 
